@@ -1,0 +1,30 @@
+#pragma once
+#include "mvPlot.h"
+
+namespace Marvel {
+
+	class mvBarSeries : public mvSeries
+	{
+
+	public:
+
+		mvBarSeries(const std::string& name, const std::vector<mvVec2>& points, bool horizontal)
+			: mvSeries(name, points), m_horizontal(horizontal)
+		{
+		}
+
+		void draw() override
+		{
+			if(m_horizontal)
+				ImPlot::PlotBarsH(m_name.c_str(), m_xs.data(), m_ys.data(), m_xs.size(), m_weight);
+			else
+				ImPlot::PlotBars(m_name.c_str(), m_xs.data(), m_ys.data(), m_xs.size(), m_weight);
+		}
+
+	private:
+
+		bool m_horizontal;
+
+	};
+
+}
